--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Goblin+One&family=Prompt:wght@100;200;300;600&display=swap');
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	background-color: #0c272a;
+	font-family: 'Prompt', sans-serif;
+	overflow: hidden;
+	/* padding-bottom: env(safe-area-inset-bottom); */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@supports (-webkit-touch-callout: none) {
+	.bottom-ios {
+		/* padding-bottom: 75px; */
+		/* padding-bottom: env(safe-area-inset-bottom) !important;
+		padding-top: env(safe-area-inset-top) !important; */
+	}
 }
+
+/* .bottom-ios{
+	padding-bottom: env(safe-area-inset-bottom) !important;
+} */
